# micro-projects-for-rust

./: Cargo.toml
async_await/: Cargo.toml
async_await/src/: main.rs
decompress/: Cargo.toml
decompress/src/: main.rs
read-csv/: demo.csv
read-csv/src/: main.rs
read-json/: Cargo.toml  demo.json
read-json/src/: main.rs
request/: Cargo.toml
request/src/: main.rs
src/: main.rs
write-json/: Cargo.toml
write-json/src/: main.rs
